# realsense_scripts

./: README.md  align-d2c.ipynb  align-depth.py  dualcam.py
align-capture/: CMakeLists.txt  rs-align-capture.cpp
